tests/examples/good/misc/good123.lat
int main() {
    A a;
    if (cast<A,null> == a) {
        printString("ok");
    } else {
        printString("wrong");
    }

    return 0;
}

class A {
    int a;
}