tests/examples/bad/cast_not_existing_type.lat
int main() {
    cast<B, null>;
    return 1;
}

class A {}